--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <article class="gift-info">
         <h3>old iphone giveaway</h3>
         <h4 class="giveaway">
-          giveaway ends on Sunday, 24 April 2023, 8:00am
+          <!-- giveaway ends on Sunday, 24 April 2023, 8:00am -->
         </h4>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus repellendus minus impedit? Voluptatem magni nisi amet voluptas quaerat ullam non debitis odio! Hic veniam modi sapiente ab! Ea, nulla magni.
